# be-seller

./: .gitmodules  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts  routes.ts  style.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/model/: collection.rs  collection_product.rs  config.rs  mod.rs  prelude.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20230123_102114_create_config_table.rs  m20230205_121924_collection_table.rs  m20230205_125159_collection_product_table.rs
src-tauri/src/: error.rs  main.rs  prelude.rs  state.rs
src-tauri/src/background/: mod.rs  runner_keyword.rs
src-tauri/src/ipc/: add_config_shopee.rs  crawl_by_keywords.rs  edit_config_shopee.rs  get_col_db.rs  get_config_shopee.rs  get_data_login_bigseller.rs  get_filter_config.rs  get_product_list.rs  get_profiles.rs  login_bigseller.rs  mod.rs  remove_config_shopee.rs  run_migration.rs
src-tauri/src/utils/: mod.rs
src/components/: AddShopeeConfigModal.vue  BigSellerLoginModal.vue  CollectionFromDb.vue  ExportSelection.vue  GrabByKeyword.vue  ProductSearchFilter.vue  ProfileList.vue
src/pages/: BsUpload.vue  Filter.vue  Initial.vue
src/types/: ShopeeConfigData.ts  ShopeeFilterConfig.ts
src/utils/: crawlByKeywordSender.ts  createConfigShopeeFn.ts  editConfigShopeeFn.ts  errortype.ts  getBigSellerPreLoginData.ts  getColDb.ts  getProducts.ts  getProfiles.ts  loginBigSeller.ts  removeConfigShopeeFn.ts  useGetConfig.ts  useGetFIlterConfigShopee.ts
