[package]
name = "big-seller"
version = "0.0.0"
description = "Marketplace Management App"
authors = ["mantracode@yahoo.com"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
winres = "0.1.12"

[dependencies]
serde_json = "1.0"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-file", "fs-write-file", "path-all", "shell-open"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "with-json", "postgres-array", "runtime-tokio-rustls", "macros" ] }
auto_requester = { path = "auto_request" }
migration = { path = "migration" }
entity = { path = "entity" }
bigseller-client = { path = "bigseller_client" } 
thiserror = "1.0.38"
async-mutex = "1.4.0"
urlencoding = "2.1.2"
regex = "1.7.1"

[package.metadata.winres]
OriginalFilename = "Be Seller.exe"
FileDescription = "Marketplace Management App"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
strip = true
codegen-units = 16
debug = false
